# herefanmi-redo

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml
dataset-regenerate/: launch-vllm-server.sh  regenrate.py
docs/: README.md  admin-and-scheduling.md  api-reference.md  architecture.md  configuration.md  deployment.md  development.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
ingest/: indexing.py  run_ingestion.py  sample_articles.py  seed_sample_data.py
scripts/: smoke_e2e.sh
services/backend/: Dockerfile  requirements.txt
services/llm/: Dockerfile  requirements.txt
services/rag/: Dockerfile  requirements.txt
services/scraper/: Dockerfile  requirements.txt
shared/: pyproject.toml
shared/hrf_shared/: __init__.py  chroma_client.py  config.py  contracts.py  json_utils.py
tests/: conftest.py
tests/backend/: conftest.py  test_admin.py  test_api.py  test_auth.py  test_orchestrator.py  test_storage.py
tests/ingest/: test_indexing.py
tests/integration/: test_e2e.py  test_openai_stub.py
tests/llm/: conftest.py  test_api.py  test_classifier.py  test_client.py  test_prompt.py
tests/rag/: conftest.py  test_api.py  test_bm25.py  test_chunking.py  test_hybrid_rrf.py  test_index_api.py  test_indexer.py  test_retriever.py
tests/scraper/: conftest.py  test_api.py  test_base.py  test_cleaning.py  test_configurable_scraper.py  test_dedup.py  (+5 more)
(+65 files in other folders)
